--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -9,7 +9,7 @@
     </p>
   </header>
 
-  <div class="row text-center">
+  <div class="row gridfix text-center">
       <% camps.forEach(function(camp) { %>
         <div class="col-md-3 col-sm-6">
             <div class="thumbnail">
