Added Database with MongoDB/Mongoose

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,16 @@
   </header>
 
   <div class="row gridfix text-center">
-      <% camps.forEach(function(camp) { %>
+      <% campgrounds.forEach(function(campground) { %>
         <div class="col-md-3 col-sm-6">
             <div class="thumbnail">
-              <img src="<%= camp.image %>">
+              <img src="<%= campground.image %>">
               <div class="caption">
-              <h4><%= camp.name %></h4>
+              <h4><%= campground.name %></h4>
               </div>
+              <p>
+                <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+              </p>
             </div>
         </div>
         <% }); %>
