--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,6 +13,9 @@
           <div class="form-group">
             <input class="form-control" type="text" name="imageUrl" placeholder="image url">
           </div>
+          <div class="form-group">
+            <input class="form-control" type="text" name="description" placeholder="description">
+          </div>
           <button class="btn btn-default btn-lg btn-block">Submit!</button>
       </form>
 
