--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
 
-      <h1 class="new">Login!</h1>
+      <h1 class="new">Log in!</h1>
       <div class="smallCenter">
         <form action="/login" method="post">
           <div class="form-group">
@@ -11,7 +11,10 @@
           <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="password">
           </div>
-          <button class="btn btn-primary btn-lg btn-block">Login</button>
+          <button class="btn btn-primary btn-lg btn-block">Log in</button>
+          <div class="form-group">
+            <a class="register" href="/register">Create an account</a>
+          </div>
         </form>
       </div>
     </div>
