--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -7,13 +7,16 @@
 
       <form action="/campgrounds/<%= campground._id %>/?_method=PUT" method="post">
           <div class="form-group">
-            <input class="form-control" type="text" name="campground[name]" placeholder="name" value="<%= campground.name %>">
+            <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
           </div>
           <div class="form-group">
-            <input class="form-control" type="text" name="campground[imageUrl]" placeholder="image url" value="<%= campground.image %>">
+            <input class="form-control" type="text" name="campground[imageUrl]"value="<%= campground.image %>">
           </div>
           <div class="form-group">
-            <input class="form-control" type="text" name="campground[description]" placeholder="description" value="<%= campground.description %>">
+            <input class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01">
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
           </div>
           <button class="btn btn-default btn-lg btn-block">Submit!</button>
       </form>
