--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,9 @@
 <% include ./partials/header %>
-  <div class="container">
-    <div class="row">
-      <h1 class="new">Log in!</h1>
-      <div class="smallCenter">
+<div class="container">
+  <div class="row">
+    <div class="smallCenter">
+      <div class="padFix">
+        <h2 class="login">Log in to your account</h2>
         <form action="/login" method="post">
           <div class="form-group">
             <input class="form-control" type="text" name="username" placeholder="username">
@@ -11,11 +12,12 @@
             <input class="form-control" type="password" name="password" placeholder="password">
           </div>
           <button class="btn btn-primary btn-lg btn-block">Log in</button>
-          <div class="form-group">
-            <a class="register" href="/register">Create an account</a>
-          </div>
         </form>
+      </div>
+      <div class="panel-footer">
+        <p>New to YelpCamp?<a class="register" href="/register">Sign Up</a></p>
       </div>
     </div>
   </div>
+</div>
 <% include ./partials/footer %>
