--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,19 +1,43 @@
 <% include ./partials/header %>
-<div class="container">
-  <div class="row">
-
-    <h1 class="new">Sign up!</h1>
-    <div class="smallCenter">
-      <form action="/register" method="post">
-        <div class="form-group">
-          <input class="form-control" type="text" name="username" placeholder="username">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="new">Sign up for free</h2>
+      </div>
+    </div>
+    <div class="row" id="signup-content">
+      <div class="col-md-8">
+        <div id="benefits">
+          <h3>Free account</h3>
+          <p>Create and comment posts. Share your best betting tips to the rest of the community.</p>
+          <h3>Become a reporter</h3>
+          <p>Become your own reporter on sports and betting.</p>
+          <h3>Start now</h3>
+          <p>Go from 0 to hero in minutes. Research, write and share your bets to the world.</p>
         </div>
-        <div class="form-group">
-          <input class="form-control" type="password" name="password" placeholder="password">
-        </div>
-        <button class="btn btn-primary btn-lg btn-block">Sign Up</button>
-      </form>
+      </div>
+      <div class="col-md-4">
+        <form action="/register" id="signup" method="post">
+          <div class="form-group">
+            <label for="firstname">Firstname</label>
+            <input class="form-control" type="text" name="firstname" placeholder="Firstname">
+          </div>
+          <div class="form-group">
+            <label for="lastname">Lastname</label>
+            <input class="form-control" type="text" name="lastname" placeholder="Lastname">
+          </div>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input class="form-control" type="text" name="username" placeholder="username">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input class="form-control" type="password" name="password" placeholder="password">
+          </div>
+          <button class="btn btn-primary btn-lg btn-block">create free account</button>
+          <p class="tos">Signing up signifies that you have read and agree to the Terms of Service and our Privacy Policy.</p>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 <% include ./partials/footer %>
