--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,11 +2,12 @@
 
 <div class="container">
   <div class="row">
-    <h1 class="new">Create a new Campground</h1>
+    <h2 class="new">Create a new Campground</h2>
 
     <div class="smallCenter">
+      <div class="padFix">
 
-      <form action="/campgrounds" method="post">
+        <form action="/campgrounds" method="post">
           <div class="form-group">
             <input class="form-control" type="text" name="name" placeholder="name">
           </div>
@@ -20,9 +21,10 @@
             <input class="form-control" type="text" name="description" placeholder="description">
           </div>
           <button class="btn btn-default btn-lg btn-block">Submit!</button>
-      </form>
+        </form>
 
-      <a href="/campgrounds">Back</a>
+        <a href="/campgrounds">Back</a>
+      </div>
     </div>
 
   </div>
