--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -25,10 +25,21 @@
           <% } %>
         </div>
       </div>
+
       <div class="well">
-        <div class="text-right">
-          <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Leave a review</a>
+        <% if(!currentUser) { %>
+          <textarea class="form-control" placeholder="Please log in to comment..." readonly></textarea>
+      <% } else { %>
+        <form action="/campgrounds/<%= campground._id %>/comments" method="post">
+        <div class="form-group">
+        <textarea class="form-control" type="text" name="comment[text]" placeholder="Comment"></textarea>
         </div>
+        <div class="text-right">
+        <!-- <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Leave a review</a> -->
+        <button class="btn btn-success">Leave a review</button>
+        </div>
+        </form>
+        <% } %>
         <hr>
         <% campground.comments.forEach(function(comment){ %>
           <div class="row">
