--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -2,18 +2,20 @@
 
 <div class="container">
   <div class="row">
-    <h1 class="new">Edit Your Comment</h1>
+    <h2 class="new">Edit Your Comment</h2>
 
     <div class="smallCenter">
+      <div class="padFix">
 
       <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="post">
           <div class="form-group">
-            <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+            <textarea class="form-control" type="text" name="comment[text]"><%= comment.text %></textarea>
           </div>
           <button class="btn btn-default btn-lg btn-block">Submit!</button>
       </form>
 
       <a href="/campgrounds">Back</a>
+    </div>
     </div>
 
   </div>
