--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,10 +1,10 @@
 <% include ../partials/header %>
 <div class="container">
   <header class="jumbotron">
-    <h1>Welcome To YelpCamp!</h1>
-    <p>View our hand-picked campgrounds from all over the world.</p>
+    <h1>Welcome To LetBet!</h1>
+    <p>View our hand-picked Bets from all over the world.</p>
     <p>
-      <a href="/campgrounds/new" class="btn btn-primary btn-large">Add New Campground</a>
+      <a href="/campgrounds/new" class="btn btn-primary btn-large">Add New Post</a>
     </p>
   </header>
 
