--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>YelpCamp</title>
+    <title>LetBet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
@@ -11,16 +11,16 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a href="/campgrounds" class="navbar-brand">YelpCamp</a>
+          <a href="/campgrounds" class="navbar-brand">LetBet</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <% if(!currentUser){ %>
-              <li><a href="/login">Login</a></li>
+              <li><a href="/login">Sign in</a></li>
               <li><a href="/register">Sign Up</a></li>
               <% } else {%>
                 <li><a href="#">Signed In As <strong><%= currentUser.username %></strong></a> </li>
-              <li><a href="/logout">Logout</a></li>
+              <li><a href="/logout">Sign Out</a></li>
               <% } %>
           </ul>
         </div>
