--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -26,7 +26,7 @@
           </div>
         </div>
         <% }); %>
-    <div class="col-md-4">
+    <div class="col-md-4 hidden-sm hidden-xs">
       <div class="sidebar">
         <p>CONTENT</p>
         <p>CONTENT</p>
