--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,19 @@ textarea.form-control {
   margin: 0 0 15px 0;
 }
 
+.well {
+  border-radius: 0;
+}
+
+.postMeta {
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 12px;
+  line-height: 1.4;
+  padding-left: 10px;
+  text-rendering: auto;
+}
+
 .sidebar {
     background-color: rgba(255,255,255,0);
     position: absolute;
