--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -17,7 +17,7 @@
             <input class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01">
           </div>
           <div class="form-group">
-            <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
+            <textarea class="form-control" type="text" name="campground[description]"><%= campground.description %></textarea>
           </div>
           <button class="btn btn-default btn-lg btn-block">Submit!</button>
       </form>
