--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -18,7 +18,7 @@
             <input class="form-control" type="number" name="price" placeholder="price" min="0.01" step="0.01">
           </div>
           <div class="form-group">
-            <input class="form-control" type="text" name="description" placeholder="description">
+            <textarea class="form-control" type="text" name="description" placeholder="description"></textarea>
           </div>
           <button class="btn btn-default btn-lg btn-block">Submit!</button>
         </form>
