--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
         </form>
       </div>
       <div class="panel-footer">
-        <p>New to YelpCamp?<a class="register" href="/register">Sign Up</a></p>
+        <p>Dont have an account?<a class="register" href="/register">Sign Up</a></p>
       </div>
     </div>
   </div>
