--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -23,7 +23,7 @@
               <ul class="list-inline list-unstyled">
                 <li><em>By: <%= campground.author.username %></em></li>
                 <li>|</li>
-                <li><span><i class="glyphicon glyphicon-calendar"></i> <%= campground.created.toLocaleDateString()%></span></li>
+                <li><span><i class="glyphicon glyphicon-calendar"></i> <%= campground.created.toLocaleDateString('sv-SE')%></span></li>
                 <li>|</li>
                 <span><i class="glyphicon glyphicon-comment"></i> 2 comments</span>
                 </ul>
