--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,14 +18,14 @@
       </div>
       <div class="col-md-4">
         <form action="/register" id="signup" method="post">
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="firstname">Firstname</label>
             <input class="form-control" type="text" name="firstname" placeholder="Firstname">
           </div>
           <div class="form-group">
             <label for="lastname">Lastname</label>
             <input class="form-control" type="text" name="lastname" placeholder="Lastname">
-          </div>
+          </div> -->
           <div class="form-group">
             <label for="username">Username</label>
             <input class="form-control" type="text" name="username" placeholder="username">
